tests/tektoncd/tektoncd-install/overlays/istio/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_pipelineresources.tekton.dev.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  name: pipelineresources.tekton.dev
spec:
  group: tekton.dev
  names:
    categories:
    - all
    - tekton-pipelines
    kind: PipelineResource
    plural: pipelineresources
  scope: Namespaced
  subresources:
    status: {}
  version: v1alpha1
