tests/tektoncd/tektoncd-install/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_tektoncd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tektoncd
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tektoncd/
    rewrite:
      uri: /tektoncd/
    route:
    - destination:
        host: tekton-pipelines-controller..svc.cluster.local
        port:
          number: 80
