tests/tektoncd/tektoncd-install/overlays/istio/test_data/expected/default_~g_v1_configmap_tektoncd-install-istio-parameters.yaml
apiVersion: v1
data:
  clusterDomain: cluster.local
  namespace: ""
kind: ConfigMap
metadata:
  name: tektoncd-install-istio-parameters
