tests/tektoncd/tektoncd-install/overlays/istio/test_data/expected/tekton-pipelines_~g_v1_configmap_config-artifact-pvc.yaml
apiVersion: v1
data: null
kind: ConfigMap
metadata:
  name: config-artifact-pvc
  namespace: tekton-pipelines
