tests/tektoncd/tektoncd-install/overlays/istio/test_data/expected/tekton-pipelines_~g_v1_service_tekton-pipelines-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-pipelines-webhook
  name: tekton-pipelines-webhook
  namespace: tekton-pipelines
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: tekton-pipelines-webhook
