tests/tektoncd/tektoncd-install/overlays/istio/test_data/expected/tekton-pipelines_~g_v1_serviceaccount_tekton-pipelines-controller.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: tekton-pipelines-controller
  namespace: tekton-pipelines
